--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <h1>Welcome to <i><b>THE SECRETS OF THE UNIVERSE!!</b></i></h1>
 
-Allow Windows Hello:
+<p>Allow Windows Hello:
 1. Search for 'Edit Group Policy" in the start menu and open the utility.
 2. Navigate to 'Computer Configuration, Administrative Template, Windows Components, Windows Hello for Business'.
 3. Double Click 'Use Windows Hello for Business' and Enable it.
