--- a/index.html
+++ b/index.html
@@ -1,29 +1,54 @@
 
 <h1>Welcome to <i><b>THE SECRETS OF THE UNIVERSE!!</b></i></h1>
-
-<p>Allow Windows Hello:
+<br>
+Allow Windows Hello:
+<br>
 1. Search for 'Edit Group Policy" in the start menu and open the utility.
+<br>
 2. Navigate to 'Computer Configuration, Administrative Template, Windows Components, Windows Hello for Business'.
+<br>
 3. Double Click 'Use Windows Hello for Business' and Enable it.
+<br>
 4. Double Click 'Use Biometrics' and Enable it.
+<br>
 5. Done!
+<br>
 
+<br>
 Set Up Windows Hello:
+<br>
 1. Search for 'Settings' in the start menu and open the application. (or alternatively press CTRL+I)
+<br>
 2. Navigate to 'Accounts' and then 'Sign-In Options'
+<br>
 3. Select your chosen Biometric Authentication Method and follow the setup procedure.
+<br>
 4. Once you are prompted select Use another authenticator app.
+<br>
 5. Install the Authenticator Chrome Extension on a chosen browser with no extension restrictions. (https://chromewebstore.google.com/detail/authenticator/bhghoamapcdpbohphigoooaddinpkbai)
+<br>
 6. Screenshot the qr code and upload it to the authenticator app by pressing the 'Pencil, +, Import QR Images'.
+<br>
 7. Type in the 6 digit code from the authenticator app.
+<br>
 8. Done!
+<br>
 (The authenticator setup prosses may not work if the page has been open for too long. If it does not work correctly, restart the hello setup prosses.)
+<br>
 
+<br>
 Remove Blocked Chrome Extensions:
+<br>
 1. Search for 'Registry Edit" in the start menu and open the utility.
+<br>
 2. Navigate to 'Computer\HKEY_LOCAL_MACHINE\SOFTWARE\Policies\Google\Chrome\ExtensionInstallBlocklist'.
+<br>
 3. Open the value named '1' and replace the asterisk with any text of your choice. (I chose 'no')
+<br>
 4. Reopen Chrome or reload the Policies.
+<br>
 5. Done!
+<br>
 
+<br>
 All of these processes are reversable by simply renaming the edited values or switching the policies back to 'Not Defined'.
