--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+    body {font-family: monospace;}
+    h1   {color: darkblue;}
+    p    {color: red;}
+    </style>
 <h1>Welcome to <i><b>THE SECRETS OF THE UNIVERSE!!</b></i></h1>
-<br>
-Allow Windows Hello:
-<br>
+</head>
+<body>
+<h3>Allow Windows Hello:</h3>
 1. Search for 'Edit Group Policy" in the start menu and open the utility.
 <br>
 2. Navigate to 'Computer Configuration, Administrative Template, Windows Components, Windows Hello for Business'.
@@ -15,8 +23,7 @@ Allow Windows Hello:
 <br>
 
 <br>
-Set Up Windows Hello:
-<br>
+<h3>Set Up Windows Hello:</h3>
 1. Search for 'Settings' in the start menu and open the application. (or alternatively press CTRL+I)
 <br>
 2. Navigate to 'Accounts' and then 'Sign-In Options'
@@ -37,8 +44,7 @@ Set Up Windows Hello:
 <br>
 
 <br>
-Remove Blocked Chrome Extensions:
-<br>
+<h3>Remove Blocked Chrome Extensions:</h3>
 1. Search for 'Registry Edit" in the start menu and open the utility.
 <br>
 2. Navigate to 'Computer\HKEY_LOCAL_MACHINE\SOFTWARE\Policies\Google\Chrome\ExtensionInstallBlocklist'.
@@ -51,4 +57,6 @@ Remove Blocked Chrome Extensions:
 <br>
 
 <br>
-All of these processes are reversable by simply renaming the edited values or switching the policies back to 'Not Defined'.
+<i>All of these processes are reversable by simply renaming the edited values or switching the policies back to 'Not Defined'.</i>
+</body>
+</html>
