--- a/index.html
+++ b/index.html
@@ -58,5 +58,8 @@
 
 <br>
 <i>All of these processes are reversable by simply renaming the edited values or switching the policies back to 'Not Defined'.</i>
+<br>
+<br>
+One Click Windows hello permision and Chrome Unblocking coming soon!
 </body>
 </html>
